--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "firebase": "^11.9.1",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
